# canary

./: .gitmodules  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  PROGRESS.md  README.md
backend/: .gitignore  Dockerfile  main.py  pyproject.toml  railway.toml
backend/constants/: echarts_constants.py  fmp_constants.py  httpx_constants.py
backend/dependencies/: __init__.py  dependency.py  environment.py
backend/loaders/: __init__.py  constants.py  fmp_loaders.py  loaders.py  normalise.py
backend/models/: echarts.py  query.py
backend/routers/capex_revenue_ratio/: router.py  utility.py
backend/routers/cartesian/: constants.py  router.py
backend/src/: constants.py  dependencies.py  global_constants.py  types.py
backend/src/catalog/: __init__.py  analysis.py  metric.py
backend/src/charting/: models.py  serialise.py
backend/src/dependencies/: __init__.py  dependency.py  environment.py
backend/src/display/: charts.py  fields.py  input_models.py  models.py  output_models.py  serialise.py  style.py
backend/src/loaders/: __init__.py  constants.py  dispatch.py  load.py  models.py  normalise.py  utility.py
backend/src/models/: __init__.py  query_params.py
backend/src/routers/: terminal.py  utility.py
backend/src/terminal/: models.py  terminal.py  utility.py
backend/src/transformations/: __init__.py  collective.py  constants.py  individual.py  metric_gen.py  models.py  recipe_individual.py  steps.py  transform_collective.py  transform_individual.py  utility.py
backend/transformers/: merge.py  serialise.py
backend/validators/: validators.py
(+68 files in other folders)
