[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "coloraide>=8.10",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.139.0",
    "polars>=1.42.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
